[gd_scene load_steps=15 format=3 uid="uid://dn1vatgdq214p"]

[ext_resource type="Script" uid="uid://bdhmnv2gp3pv7" path="res://Scripts/ObjectScripts/PlayerBulletManager.gd" id="1_des1p"]
[ext_resource type="Texture2D" uid="uid://lp8wja5hyqkb" path="res://Assets/Images/Objects/PlayerProps/PlayerBullet.png" id="3_aobxr"]

[sub_resource type="CircleShape2D" id="CircleShape2D_63qep"]
radius = 6.67083

[sub_resource type="Gradient" id="Gradient_552lm"]
offsets = PackedFloat32Array(0.00598802, 1)
colors = PackedColorArray(0.37, 0.853, 1, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_fjh61"]
gradient = SubResource("Gradient_552lm")
width = 1
height = 1

[sub_resource type="Gradient" id="Gradient_55v1o"]
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_wl5md"]
gradient = SubResource("Gradient_55v1o")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_ak2wy"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(3, 5, 1)
angle_min = -720.0
angle_max = 720.0
spread = 89.11
initial_velocity_min = 10.0
initial_velocity_max = 19.8
gravity = Vector3(0, 20, 0)
color_ramp = SubResource("GradientTexture1D_wl5md")
hue_variation_min = -0.02
hue_variation_max = 0.02
turbulence_noise_strength = 20.0
turbulence_noise_scale = 10.0

[sub_resource type="AtlasTexture" id="AtlasTexture_qo16s"]
atlas = ExtResource("3_aobxr")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hllyl"]
atlas = ExtResource("3_aobxr")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_15vm7"]
atlas = ExtResource("3_aobxr")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_46hii"]
atlas = ExtResource("3_aobxr")
region = Rect2(0, 96, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_t5eoq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qo16s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hllyl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_15vm7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_46hii")
}],
"loop": false,
"name": &"Init",
"speed": 13.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_o200d"]
radius = 45.5027

[node name="Node2D" type="Node2D"]
z_index = 1
script = ExtResource("1_des1p")

[node name="PlayerBulletHurter" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerBulletHurter"]
position = Vector2(2.5, 2.5)
shape = SubResource("CircleShape2D_63qep")

[node name="DespawnTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
autostart = true

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
position = Vector2(2.5, 2.5)
amount = 100
texture = SubResource("GradientTexture2D_fjh61")
lifetime = 2.0
visibility_rect = Rect2(-5000, -5000, 10000, 10000)
process_material = SubResource("ParticleProcessMaterial_ak2wy")

[node name="BulletSprite" type="AnimatedSprite2D" parent="."]
self_modulate = Color(6, 6, 5.5, 1)
position = Vector2(2.5, 2.5)
rotation = 1.5708
sprite_frames = SubResource("SpriteFrames_t5eoq")
animation = &"Init"
autoplay = "Init"

[node name="EnemyDetectionRadius" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyDetectionRadius"]
position = Vector2(2.5, 2.5)
shape = SubResource("CircleShape2D_o200d")

[connection signal="area_entered" from="PlayerBulletHurter" to="." method="_on_player_bullet_hurter_area_entered"]
[connection signal="body_entered" from="PlayerBulletHurter" to="." method="_on_player_bullet_hurter_body_entered"]
[connection signal="animation_finished" from="BulletSprite" to="." method="_on_bullet_sprite_animation_finished"]
[connection signal="area_entered" from="EnemyDetectionRadius" to="." method="_on_enemy_detection_radius_area_entered"]
